[DEV-66] 시간표 & 사용자 시간표 기능 (#320)
* chore: securityConfig에 시간표 강의 조회 추가

* feat: 시간표 조회 기능 추가

* feat: 이수, 미이수, 전체로 시간표 필터링

* feat: 이수, 미이수, 전체로 시간표 필터링을 GraduationCategory을 이용하도록 수정

* feat: NON_TAKEN 통합 필터링 추가

* feat: 유저 시간표 생성, 수정, 삭제 기능 추가

* chore: 사용하지 않는 import 제거

* fix: @LoginUser userId Swagger 문서에서 노출되지 않도록 hidden 처리

* chore: 이넘 상수 수정

* ci-cd: 개발서버 테스트 위해 깃액션 임시 수정

* feat: ALL, TAKEN 필터에서도 GraduationCategory 지정 시 카테고리 기반 필터링 지원

* refactor: 사용하지 않는 메서드 제거

* fix: Java 16 이상 전용 .toList()를 Collectors.toList()로 교체하여 호환성 해결

* test: 시간표 단위 테스트 추가

* chore: 사용하지 않는 import 문 제거

* cd-cd: 개발 서버 테스트위해 변경한 깃액션 복구

* docs(gradle): mockito-inline 버전 충돌 해결을 위한 문서 수정 및 주석 추가

* test: CI 환경에서 Dialect 오류 방지를 위해 PersistenceTestSupport 기반으로 변경

* test: mock기반 단위테스트로 변경 및 삭제

* refactor: Cognitive Complexity 리팩토링

* test: mock 설정에서 불필요한 eq() 제거

* test: mock 설정에서 불필요한 eq() 제거

* refactor: Cognitive Complexity 해결을 위해 메서드 분리